cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_array_vs_list.cif.s7-300.err
WARNING: Maximum real type size supported by the PLC is less than the CIF real type size. Some values in the program may be truncated.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  --------------------------
  (1/1) A list type is used.
  --------------------------
   * In algebraic variable "a":
     - alg list[2] int a = [1, 2];
           ^               ^
   * In algebraic variable "l":
     - alg list int l = [1, 2];
           ^            ^
